@@ -1,6 +1,10 @@
 2009-01-21 Guido Scholz <guido.scholz@bayernline.de>
 	* config-srcpd.c: Fixed counting of interface bus number,
 	reported by Heiko Gau.
+	* ddl.c, ddl_maerklin.c, ddl_nmra.c, ddl-s88.c, hsi-88.c,
+	i2c-dev.c, ib.c, li100.c, loconet.c, loopback.c, m605x.c,
+	selectrix.c, srcp-command.c, srcpd.c, srcp-fb.c, srcp-time.c,
+	zimo.c: Unhide all usleep() system error messages.
 
 2009-01-19 Guido Scholz <guido.scholz@bayernline.de>
 	* hsi-88.c, ib.c, ddl-s88.c, li100.c, srcpd.c: All sleep()
